# finbert-llm-comparison

./: README.md  basedpyrightconfig.json  pyproject.toml
outputs/: benchmark_result.json
src/finbert_llm_comparison/: __init__.py  benchmark.py  cli.py  data.py  env.py  finbert_runner.py  labels.py  openai_runner.py  types.py
tests/: test_benchmark.py  test_cli.py  test_data.py  test_env.py  test_labels.py  test_openai_parser.py
