[project]
name = "finbert-llm-comparison"
version = "0.1.0"
description = "Benchmark FinBERT vs OpenAI LLM sentiment analysis on Financial PhraseBank"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18.0",
  "openai>=1.66.0",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
fin-sentiment-benchmark = "finbert_llm_comparison.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finbert_llm_comparison"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
